--- a/less/layout.less
+++ b/less/layout.less
@@ -9,9 +9,9 @@
 .body { overflow:hidden; }
 
 // Header
-.logo { position:absolute; left:    0; top:0;      width:@west; height:@north; .gradient-nw( @layout-dark,@layout-lite); }
+.logo { position:absolute; left:    0; top:0;      width:@west; height:@north; background:@layout-dark; }
 .corp { position:absolute; left:@west; top:0;      right:@east; height:@north; .gradient-top(@layout-dark,@layout-lite); }
-.find { position:absolute; right:   0; top:0;      width:@east; height:@north; .gradient-ne( @layout-dark,@layout-lite); }
+.find { position:absolute; right:   0; top:0;      width:@east; height:@north; background:@layout-dark; }
 
 // Middle
 .tocs { position:absolute; left:    0; top:@north; width:@west; bottom:@south; .gradient-left(@layout-dark,@layout-lite);   .tocs-font; }
@@ -21,9 +21,9 @@
 .side { position:absolute; right:   0; top:@north; width:@east; bottom:@south; .gradient-right(@layout-dark,@layout-lite);  .tocs-font; }
 
 // Bottom
-.pref { position:absolute; left:    0; bottom:  0; width:@west; height:@south; .gradient-sw(@layout-dark,@layout-lite); }
+.pref { position:absolute; left:    0; bottom:  0; width:@west; height:@south; background:@layout-dark; }
 .foot { position:absolute; left:@west; bottom:  0; right:@east; height:@south; .gradient-bottom(@layout-dark,@layout-lite); }
-.trak { position:absolute; right:   0; bottom:  0; width:@east; height:@south; .gradient-se(@layout-dark,@layout-lite); }
+.trak { position:absolute; right:   0; bottom:  0; width:@east; height:@south; background:@layout-dark; }
 
 
 .menu { position:absolute; left:@west; top:0;      right:0;     height:@north; .gradient-top( @layout-dark,@layout-lite);   }
