--- a/less/muse.less
+++ b/less/muse.less
@@ -138,9 +138,9 @@
 .ikw-lev3            {  }
 
 // Header
-.ikw-logo { position:absolute; left:    0; top:0;      width:@west; height:@north; .gradient-nw( @darker-dark,@darker-lite); color:white; font-size:1.3em; }
-.ikw-corp { position:absolute; left:@west; top:0;      right:@east; height:@north; .gradient-top(@darker-dark,@darker-lite); }
-.ikw-find { position:absolute; right:   0; top:0;      width:@east; height:@north; .gradient-ne( @darker-dark,@darker-lite); }
+.ikw-logo { position:absolute; left:    0; top:0;      width:@west; height:@north; .gradient-left(  @darker-dark,@darker-lite); color:white; font-size:1.3em; }
+.ikw-corp { position:absolute; left:@west; top:0;      right:@east; height:@north; .gradient-top(   @darker-dark,@darker-lite); }
+.ikw-find { position:absolute; right:   0; top:0;      width:@east; height:@north; .gradient-right( @darker-dark,@darker-lite);  }
 
 // Middle
 .ikw-tocs { position:absolute; left:    0; top:@north; width:@west; bottom:@south; .gradient-left(  @darker-dark,@darker-lite);  .tocs-font; }
@@ -148,9 +148,9 @@
 .ikw-side { position:absolute; right:   0; top:@north; width:@east; bottom:@south; .gradient-right( @darker-dark,@darker-lite);  .tocs-font; }
 
 // Bottom
-.ikw-pref { position:absolute; left:    0; bottom:  0; width:@west; height:@south; .gradient-sw(@darker-dark,@darker-lite); }
+.ikw-pref { position:absolute; left:    0; bottom:  0; width:@west; height:@south; .gradient-left(  @darker-dark,@darker-lite); }
 .ikw-foot { position:absolute; left:@west; bottom:  0; right:@east; height:@south; .gradient-bottom(@darker-dark,@darker-lite); }
-.ikw-trak { position:absolute; right:   0; bottom:  0; width:@east; height:@south; .gradient-se(@darker-dark,@darker-lite); }
+.ikw-trak { position:absolute; right:   0; bottom:  0; width:@east; height:@south; .gradient-right( @darker-dark,@darker-lite); }
 
 .ikw-view-plane { width:100%; height:100%; }
 
