Tue 3/6 economical layout

--- a/less/muse.less
+++ b/less/muse.less
@@ -143,9 +143,9 @@
 .ikw-find { position:absolute; right:   0; top:0;      width:@east; height:@north; .gradient-right( @darker-dark,@darker-lite);  }
 
 // Middle
-.ikw-tocs { position:absolute; left:    0; top:@north; width:@west; bottom:@south; .gradient-left(  @darker-dark,@darker-lite);  .tocs-font; }
-.ikw-view { position:absolute; left:@west; top:@north; right:@east; bottom:@south;  background-color:@darker-view; z-index:1;    .tocs-font; }
-.ikw-side { position:absolute; right:   0; top:@north; width:@east; bottom:@south; .gradient-right( @darker-dark,@darker-lite);  .tocs-font; }
+.ikw-tocs { position:absolute; left:    0; top:0; width:@west; bottom:0;      .gradient-left(   @darker-dark,@darker-lite);  .tocs-font; }
+.ikw-view { position:absolute; left:@west; top:0; right:0;     bottom:0;       background-color:@darker-view; z-index:1;     .tocs-font; }
+.ikw-side { position:absolute; right:   0; top:0; width:@east; bottom:@south; .gradient-right(  @darker-dark,@darker-lite);  .tocs-font; }
 
 // Bottom
 .ikw-pref { position:absolute; left:    0; bottom:  0; width:@west; height:@south; .gradient-left(  @darker-dark,@darker-lite); }
