--- a/less/muse.less
+++ b/less/muse.less
@@ -144,7 +144,7 @@
 
 // Middle
 .ikw-tocs { position:absolute; left:    0; top:0; width:@west; bottom:0;      .gradient-left(   @darker-dark,@darker-lite);  .tocs-font; }
-.ikw-view { position:absolute; left:@west; top:0; right:0;     bottom:0;       background-color:@darker-view; z-index:1;     .tocs-font; }
+.ikw-view { position:absolute; left:    0; top:0; right:0;     bottom:0;       background-color:@darker-view; z-index:1;     .tocs-font; }
 .ikw-side { position:absolute; right:   0; top:0; width:@east; bottom:@south; .gradient-right(  @darker-dark,@darker-lite);  .tocs-font; }
 
 // Bottom
