--- a/less/ikw.less
+++ b/less/ikw.less
@@ -1,10 +1,43 @@
 
-//@import "../base/variables.less";
-@import "base";
+@import "mixin.less";
+@import "gradient.less";
 
-.ikw-part              { background-color:@back20; position:absolute; .tocs-font; z-index:2; overflow:hidden; } // background-color:@back30a;
-.ikw-hues              { background-color:black;   position:absolute; .tocs-font; z-index:2; overflow:hidden; } // background-color:@back30a;
-.ikw-pane              { background-color:@back20; position:absolute; .tocs-font; z-index:2; overflow:visible; .mixin-round(24px); } // overflow:hidden; not working
+
+.ikw-font{ font-family:Arial, Helvetica, sans-serif; }
+
+@ikw-west:170px; @ikw-north:48px; @ikw-east:32px; @ikw-south:32px;
+
+@ikw-hue:180;    @ikw-sat:40%;    @ikw-lit:30%;   @ikw-inc:12%;
+
+
+// Hue Saturation background palette in 5% lightness increments
+@ikw-back00:hsl(@ikw-hue,@ikw-sat,00%); @ikw-back05:hsl(@ikw-hue,@ikw-sat, 5%); @ikw-back10:hsl(@ikw-hue,@ikw-sat,10%); @ikw-back15:hsl(@ikw-hue,@ikw-sat,15%);
+@ikw-back20:hsl(@ikw-hue,@ikw-sat,20%); @ikw-back25:hsl(@ikw-hue,@ikw-sat,25%); @ikw-back30:hsl(@ikw-hue,@ikw-sat,30%); @ikw-back35:hsl(@ikw-hue,@ikw-sat,35%);
+@ikw-back40:hsl(@ikw-hue,@ikw-sat,40%); @ikw-back45:hsl(@ikw-hue,@ikw-sat,45%); @ikw-back50:hsl(@ikw-hue,@ikw-sat,50%); @ikw-back55:hsl(@ikw-hue,@ikw-sat,55%);
+@ikw-back60:hsl(@ikw-hue,@ikw-sat,60%); @ikw-back65:hsl(@ikw-hue,@ikw-sat,65%); @ikw-back70:hsl(@ikw-hue,@ikw-sat,70%); @ikw-back75:hsl(@ikw-hue,@ikw-sat,75%);
+@ikw-back80:hsl(@ikw-hue,@ikw-sat,80%); @ikw-back85:hsl(@ikw-hue,@ikw-sat,85%); @ikw-back90:hsl(@ikw-hue,@ikw-sat,90%); @ikw-back95:hsl(@ikw-hue,@ikw-sat,95%);
+
+@ikw-dark:@ikw-back20; @ikw-lite:@ikw-back30;
+@ikw-view:@ikw-back15; @ikw-stat:@ikw-back10;
+
+// Header
+.ikw-logo { position:absolute; left:        0; top:0; width:@ikw-west; height:@ikw-north; .gradient-left(  @ikw-dark, @ikw-lite ); color:white; font-size:1.3em; }
+.ikw-corp { position:absolute; left:@ikw-west; top:0; right:@ikw-east; height:@ikw-north; .gradient-top(   @ikw-dark, @ikw-lite ); }
+.ikw-find { position:absolute; right:       0; top:0; width:@ikw-east; height:@ikw-north; .gradient-right( @ikw-dark, @ikw-lite ); }
+
+// Middle
+.ikw-tocs { position:absolute; left:        0; top:0; width:@ikw-west; bottom:0;          .gradient-left(   @ikw-dark,@ikw-lite);  .ikw-font; }
+.ikw-view { position:absolute; left:        0; top:0; right:0;         bottom:0;          background-color: @ikw-view; z-index:1;  .ikw-font; }
+.ikw-side { position:absolute; right:       0; top:0; width:@ikw-east; bottom:@ikw-south; .gradient-right(  @ikw-dark,@ikw-lite);  .ikw-font; }
+
+// Bottom
+.ikw-pref { position:absolute; left:        0; bottom:0; width:@ikw-west; height:@ikw-south; .gradient-left(  @ikw-dark,@ikw-lite); }
+.ikw-foot { position:absolute; left:@ikw-west; bottom:0; right:@ikw-east; height:@ikw-south; .gradient-bottom(@ikw-dark,@ikw-lite); }
+.ikw-trak { position:absolute; right:       0; bottom:0; width:@ikw-east; height:@ikw-south; .gradient-right( @ikw-dark,@ikw-lite); }
+
+.ikw-part              { background-color:@ikw-back20; position:absolute; .ikw-font; z-index:2; overflow:hidden; } // background-color:@ikw-back30a;
+.ikw-hues              { background-color:black;   position:absolute; .ikw-font; z-index:2; overflow:hidden; } // background-color:@ikw-back30a;
+.ikw-pane              { background-color:@ikw-back20; position:absolute; .ikw-font; z-index:2; overflow:visible; .mixin-round(24px); } // overflow:hidden; not working
 .ikw-topic             {  }
 
 .ikw-pane-center       { position:absolute;  left:15%; top:15%; width:70%; height:70%; z-index:3; display:table; }
@@ -19,12 +52,12 @@
 
 .ikw-pane-ul-content    { margin:0; padding:0; position:absolute; left:0;  top:0;  width:auto; height:auto; }
 .ikw-pane-connect       { position:absolute;  left: 5%; top:12%; width:90%; height:83%; }
-.ikw-pane-connect-west  { position:absolute;  left: 0;  top:33%; width:33%; height:33%; background-color:@back40; }
-.ikw-pane-connect-east  { position:absolute;  left:66%; top:33%; width:33%; height:33%; background-color:@back40; }
-.ikw-pane-connect-north { position:absolute;  left:33%; top: 0;  width:33%; height:33%; background-color:@back40; }
-.ikw-pane-connect-south { position:absolute;  left:33%; top:66%; width:33%; height:33%; background-color:@back40; }
-.ikw-pane-connect-prev  { position:absolute;  left:33%; top:33%; width:33%; height:33%; background-color:@back50; }
-.ikw-pane-connect-next  { position:absolute;  left:33%; top:33%; width:33%; height:33%; background-color:@back50; }
+.ikw-pane-connect-west  { position:absolute;  left: 0;  top:33%; width:33%; height:33%; background-color:@ikw-back40; }
+.ikw-pane-connect-east  { position:absolute;  left:66%; top:33%; width:33%; height:33%; background-color:@ikw-back40; }
+.ikw-pane-connect-north { position:absolute;  left:33%; top: 0;  width:33%; height:33%; background-color:@ikw-back40; }
+.ikw-pane-connect-south { position:absolute;  left:33%; top:66%; width:33%; height:33%; background-color:@ikw-back40; }
+.ikw-pane-connect-prev  { position:absolute;  left:33%; top:33%; width:33%; height:33%; background-color:@ikw-back50; }
+.ikw-pane-connect-next  { position:absolute;  left:33%; top:33%; width:33%; height:33%; background-color:@ikw-back50; }
 
 .ikw-pane-studies       { position:absolute;  left: 5%; top:12%; width:90%; height:83%; display:block; }
 .ikw-pane-study-choice  { position:absolute;  left: 5%; top: 5%; width:90%; height:90%; .mixin-round(24px); overflow:hidden; display:table; text-align:center; }
@@ -79,33 +112,33 @@
 .ikw-pane-item-text    { text-align:left; display:inline; padding-left:0.0em; }
 
 .ikw-pane-hex          { position:absolute;  left:0; top:0; width:100%; height:100%;
-                         display:table-cell; text-align:center; vertical-align:middle; .tocs-font; color:white; }
-.ikw-pane-flow         { position:absolute; z-index:2; font-size:16px; color:@back50; display:table; }
+                         display:table-cell; text-align:center; vertical-align:middle; .ikw-font; color:white; }
+.ikw-pane-flow         { position:absolute; z-index:2; font-size:16px; color:@ikw-back50; display:table; }
 .ikw-pane-flow > i     { display:table-cell; text-align:center; vertical-align:middle; }
 .ikw-pane-flow:hover   { .mixin-hover; }
-.ikw-pane-convey       { position:absolute; z-index:2; font-size:16px; color:@back50; display:table; }
+.ikw-pane-convey       { position:absolute; z-index:2; font-size:16px; color:@ikw-back50; display:table; }
 .ikw-pane-convey > i   { display:table-cell; text-align:center; vertical-align:middle; }
 .ikw-pane-convey:hover { .mixin-hover; }
-.ikw-pane-cycle        { position:absolute; z-index:2; font-size:16px; color:@back50; display:table; }
+.ikw-pane-cycle        { position:absolute; z-index:2; font-size:16px; color:@ikw-back50; display:table; }
 .ikw-pane-cycle > i    { display:table-cell; text-align:center; vertical-align:middle; }
 .ikw-pane-cycle:hover  { .mixin-hover; }
 
 .ikw-row              { position:absolute;   z-index:3; }
-.ikw-row-icon         { position:absolute;  background-color:@back10; display:table; .tocs-font; .mixin-round-left(16px); padding-left:12px; }
+.ikw-row-icon         { position:absolute;  background-color:@ikw-back10; display:table; .ikw-font; .mixin-round-left(16px); padding-left:12px; }
 .ikw-row-icon:hover   { .mixin-hover; }
 .ikw-row-icon > i     { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
 .ikw-col              { position:absolute;  background-color:transparent; z-index:3; }
-.ikw-col-icon         { position:absolute;  display:table; .tocs-font; }
+.ikw-col-icon         { position:absolute;  display:table; .ikw-font; }
 .ikw-col-icon:hover   { .mixin-hover; }
 .ikw-col-icon > i     { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
-.ikw-group            { position:absolute;  background:@back10; z-index:1; .mixin-round(24px); }
-.ikw-group-icon       { position:absolute;  display:table; .tocs-font; color:white; }
+.ikw-group            { position:absolute;  background:@ikw-back10; z-index:1; .mixin-round(24px); }
+.ikw-group-icon       { position:absolute;  display:table; .ikw-font; color:white; }
 .ikw-group-icon:hover { .mixin-hover; }
 .ikw-group-icon > i   { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
-.ikw-all-icon        { position:absolute;  display:table; .tocs-font; z-index:3; }
+.ikw-all-icon        { position:absolute;  display:table; .ikw-font; z-index:3; }
 .ikw-all-icon:hover  { .mixin-hover; }
 .ikw-all-icon > i    { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
@@ -113,22 +146,22 @@
 .ikw-togg:hover      { .mixin-hover; }
 
 
-[id$="-north"]        { position:absolute; z-index:2; font-size:16px; color:@back50  }
+[id$="-north"]        { position:absolute; z-index:2; font-size:16px; color:@ikw-back50  }
 [id$="-north"]:hover  { .mixin-hover; }
-[id$="-south"]        { position:absolute; z-index:2; font-size:16px; color:@back50  }
+[id$="-south"]        { position:absolute; z-index:2; font-size:16px; color:@ikw-back50  }
 [id$="-south"]:hover  { .mixin-hover; }
-[id$="-east"]         { position:absolute; z-index:2; font-size:16px; color:@back50  }
+[id$="-east"]         { position:absolute; z-index:2; font-size:16px; color:@ikw-back50  }
 [id$="-east"]:hover   { .mixin-hover; }
-[id$="-west"]         { position:absolute; z-index:2; font-size:16px; color:@back50  }
+[id$="-west"]         { position:absolute; z-index:2; font-size:16px; color:@ikw-back50  }
 [id$="-west"]:hover   { .mixin-hover; }
 
 .ikw-convey            { position:absolute;  background-color:transparent; }
-.ikw-convey-icon       { position:absolute;  display:table; .tocs-font; color:@back50; z-index:2; }
+.ikw-convey-icon       { position:absolute;  display:table; .ikw-font; color:@ikw-back50; z-index:2; }
 .ikw-convey-icon:hover { .mixin-hover; }
 .ikw-convey-icon > i   { display:table-cell; text-align:center; vertical-align:middle; font-size:16px; }
 
 .ikw-flow              { position:absolute;  background-color:transparent }
-.ikw-flow-icon         { position:absolute;  display:table; .tocs-font; color:@back50; z-index:2; }
+.ikw-flow-icon         { position:absolute;  display:table; .ikw-font; color:@ikw-back50; z-index:2; }
 .ikw-flow-icon:hover   { .mixin-hover; }
 .ikw-flow-icon > i     { display:table-cell; text-align:center; vertical-align:middle; font-size:16px; }
 
@@ -137,21 +170,7 @@
 .ikw-lev2            {  }
 .ikw-lev3            {  }
 
-// Header
-.ikw-logo { position:absolute; left:    0; top:0;      width:@west; height:@north; .gradient-left(  @darker-dark,@darker-lite); color:white; font-size:1.3em; }
-.ikw-corp { position:absolute; left:@west; top:0;      right:@east; height:@north; .gradient-top(   @darker-dark,@darker-lite); }
-.ikw-find { position:absolute; right:   0; top:0;      width:@east; height:@north; .gradient-right( @darker-dark,@darker-lite);  }
-
-// Middle
-.ikw-tocs { position:absolute; left:    0; top:0; width:@west; bottom:0;      .gradient-left(   @darker-dark,@darker-lite);  .tocs-font; }
-.ikw-view { position:absolute; left:    0; top:0; right:0;     bottom:0;       background-color:@darker-view; z-index:1;     .tocs-font; }
-.ikw-side { position:absolute; right:   0; top:0; width:@east; bottom:@south; .gradient-right(  @darker-dark,@darker-lite);  .tocs-font; }
-
-// Bottom
-.ikw-pref { position:absolute; left:    0; bottom:  0; width:@west; height:@south; .gradient-left(  @darker-dark,@darker-lite); }
-.ikw-foot { position:absolute; left:@west; bottom:  0; right:@east; height:@south; .gradient-bottom(@darker-dark,@darker-lite); }
-.ikw-trak { position:absolute; right:   0; bottom:  0; width:@east; height:@south; .gradient-right( @darker-dark,@darker-lite); }
-
+.ikw-view       { width:100%; height:100%; }
 .ikw-view-plane { width:100%; height:100%; }
 
 .ikw-sidebar                { background-color:#EEEEEE; position:absolute; left: 10px; top:60px; width:150px; bottom:  2%; }
@@ -162,30 +181,30 @@
 .ikw-text-top               { display:table-cell!important; vertical-align:top;    }
 .ikw-text-bottom            { display:table-cell!important; vertical-align:bottom; }
 
-.ikw-info-btn             { background-color:@back30;     position:absolute; left:  1%;   top: 1%;   width: 3%;  height:  3%;    color:white; font-size:1.5em; }
+.ikw-info-btn             { background-color:@ikw-back30;     position:absolute; left:  1%;   top: 1%;   width: 3%;  height:  3%;    color:white; font-size:1.5em; }
 
 .ikw-practice             { display:table; .mixin-round(24px);   }
-.ikw-practice-cell        { display:table-cell; text-align:center; vertical-align:middle; .tocs-font; color:white;
+.ikw-practice-cell        { display:table-cell; text-align:center; vertical-align:middle; .ikw-font; color:white;
                                                           position:absolute; left: 40.0%;   top: 40.0%; width: 20%;  height:20%; }
 .ikw-practice-cell > i    { display:block; font-size:3em; }
 
 .ikw-fab-learn-btn        { background-color:transparent; position:absolute; left:  0.5%;   top: 17.5%; width:  2%;  height:  2%; color:white;    font-size:1.5em; }
 .ikw-fab-learn            { background-color:transparent; position:absolute; left:     0;   top:   3%;  right:  0;   height: 29%;                }
-.ikw-practice-design      { background-color:@back30;     position:absolute; left:    3%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
-.ikw-practice-acquire     { background-color:@back30;     position:absolute; left:   35%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
-.ikw-practice-sample      { background-color:@back30;     position:absolute; left:   67%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-design      { background-color:@ikw-back30; position:absolute; left:    3%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-acquire     { background-color:@ikw-back30; position:absolute; left:   35%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-sample      { background-color:@ikw-back30; position:absolute; left:   67%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
 
 .ikw-fab-do-btn           { background-color:transparent; position:absolute; left:  0.5%;   top: 49.5%; width:  2%;  height:  2%; color:white;    font-size:1.5em; }
 .ikw-fab-do               { background-color:transparent; position:absolute; left:     0;   top:  35%;  right:  0;   height: 29%;                }
-.ikw-practice-analyze     { background-color:@back30;     position:absolute; left:    3%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
-.ikw-practice-model       { background-color:@back30;     position:absolute; left:  35%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
-.ikw-practice-visualize   { background-color:@back30;     position:absolute; left:  67%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-analyze     { background-color:@ikw-back30; position:absolute; left:    3%;   top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-model       { background-color:@ikw-back30; position:absolute; left:  35%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-visualize   { background-color:@ikw-back30; position:absolute; left:  67%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
 
 .ikw-fab-share-btn        { background-color:transparent; position:absolute; left:  0.5%;   top: 81.5%; width:  2%;  height:  2%; color:white;    font-size:1.5em; }
 .ikw-fab-share            { background-color:transparent; position:absolute; left:    0;    top:  67%;  right:  0;   height: 29%;                }
-.ikw-practice-archive     { background-color:@back30;     position:absolute; left:   3%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
-.ikw-practice-publish     { background-color:@back30;     position:absolute; left:  35%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
-.ikw-practice-compare     { background-color:@back30;     position:absolute; left:  67%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-archive     { background-color:@ikw-back30; position:absolute; left:   3%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-publish     { background-color:@ikw-back30; position:absolute; left:  35%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
+.ikw-practice-compare     { background-color:@ikw-back30; position:absolute; left:  67%;    top:    0;  width: 29%;  height:100%; .ikw-practice; }
 
 
 .ikw-convey-ce   { background-color:transparent; position:absolute; left:28.5%;    top:11.5%; width: 10%;   height: 10%; z-index:2; display:table; }
@@ -203,8 +222,8 @@
 .ikw-flow-bg     { background-color:transparent; position:absolute; left:76.5%;    top:60.5%; width: 10%;   height: 10%; z-index:2; display:table; }
 
 .ikw-study          { color:white; }
-.ikw-study-table    { display:table;             position:absolute; left:0;        top:0;     width:100%;  height:100%;       }
-.ikw-study-cell     { display:table-cell; vertical-align:middle; text-align:center; .tocs-font; font-size:1.2em;  }
+.ikw-study-table    { display:table; position:absolute; left:0;        top:0;     width:100%;  height:100%;       }
+.ikw-study-cell     { display:table-cell; vertical-align:middle; text-align:center; .ikw-font; font-size:1.2em;  }
 .ikw-study-cell > i { display:block; }
 
 .ikw-study-1a    { background-color:transparent; position:absolute; left:    0;    top:    0; width:33.3%;  height:33.3%; .ikw-study; }
@@ -227,8 +246,8 @@
 .ikw-cells-3b    { background-color:transparent; position:absolute; left:33.3%;    top:66.6%; width:33.3%;  height:33.3%; .ikw-study; }
 .ikw-cells-3c    { background-color:transparent; position:absolute; left:66.6%;    top:66.6%; width:33.3%;  height:33.3%; .ikw-study; }
 
-//[class^="ikw-convey"] :hover { .mixin-round(50%); .mixin-border-color-width(@back50,2px);     color:white;   font-size:2.0em; }
-//[class^="ikw-convey"] > i    { text-align:center;  display:table-cell; vertical-align:middle; color:@back25; font-size:1.1em; .mixin-scale(0.8,0.8); }
+//[class^="ikw-convey"] :hover { .mixin-round(50%); .mixin-border-color-width(@ikw-back50,2px);     color:white;   font-size:2.0em; }
+//[class^="ikw-convey"] > i    { text-align:center;  display:table-cell; vertical-align:middle; color:@ikw-back25; font-size:1.1em; .mixin-scale(0.8,0.8); }
 
-//[class^="ikw-flow"] :hover   { .mixin-round(50%); .mixin-border-color-width(@back50,2px);     color:white;   font-size:2.0em; }
-//[class^="ikw-flow"] > i      { text-align:center;  display:table-cell; vertical-align:middle; color:@back25; font-size:1.1em; .mixin-rotate-scale(90deg,-0.8,0.8); }
+//[class^="ikw-flow"] :hover   { .mixin-round(50%); .mixin-border-color-width(@ikw-back50,2px);     color:white;   font-size:2.0em; }
+//[class^="ikw-flow"] > i      { text-align:center;  display:table-cell; vertical-align:middle; color:@ikw-back25; font-size:1.1em; .mixin-rotate-scale(90deg,-0.8,0.8); }
