--- a/less/table.less
+++ b/less/table.less
@@ -1,5 +1,6 @@
 
-@import "tabs.less";
+@import "color.less";
+@import "mixin.less";
 
 .table-form         {}
 .table-table        { font-family:Arial, Helvetica, sans-serif; border-collapse:collapse; margin-left:12px; margin-top:12px; color:white; }
@@ -14,34 +15,34 @@
 .table-th-page-dn   { }
 #PAGER              { min-width:4em; }
 .table-th-page-num  { min-width:4em; font-size:0.75em; }
-.table-th-page-beg  { background:@back15; text-align:right;  min-width:1.2em }
-.table-th-page-to   { background:@back15; text-align:center; min-width:0.2em }
-.table-th-page-end  { background:@back15; text-align:right;  min-width:1.2em }
-.table-th-page-over { background:@back15; text-align:center; min-width:0.2em }
-.table-th-page-tot  { background:@back15; text-align:right;  min-width:1.2em }
+.table-th-page-beg  { background:@color-back15; text-align:right;  min-width:1.2em }
+.table-th-page-to   { background:@color-back15; text-align:center; min-width:0.2em }
+.table-th-page-end  { background:@color-back15; text-align:right;  min-width:1.2em }
+.table-th-page-over { background:@color-back15; text-align:center; min-width:0.2em }
+.table-th-page-tot  { background:@color-back15; text-align:right;  min-width:1.2em }
 
 .table-td           { padding-left:1ex; padding-right:1ex; }
 
 .table-td-obj       {}
 
-.table-tr-load      { min-width:4em; background:@back30; } // 90
+.table-tr-load      { min-width:4em; background:@color-back30; } // 90
 .table-th-load      {}
 .table-td-load      {}
 
-.table-tr-group     { background:@back40; }
+.table-tr-group     { background:@color-back40; }
 .table-td-group     {}
 
 .table-tr-filter    {}
 .table-th-filter    { padding:1ex;  }
 .table-div-filter   { width:100%; overflow:hidden; }
-.table-input-filter { width:90%; height:1.5em;  background:@back80; .mixin-round(8px);  }
+.table-input-filter { width:90%; height:1.5em;  background:@color-back80; .mixin-round(8px);  }
 
 
 
-.table-even      { background:@back20; } // 85
-.table-odds      { background:@back15; } // 80
-.table-thead     { background:@back15; } // 75
-.table-tfoot     { background:@back20; } // 70
+.table-even      { background:@color-back20; } // 85
+.table-odds      { background:@color-back15; } // 80
+.table-thead     { background:@color-back15; } // 75
+.table-tfoot     { background:@color-back20; } // 70
 .table-tbody     {  }
 
 
