--- a/less/tabs.less
+++ b/less/tabs.less
@@ -1,11 +1,16 @@
 
 
-@import "btn.less";
+@import "mixin.less";
+
+@tabs-back20:hsl( 330, 40%, 40% );
+@tabs-back40:hsl( 330, 40%, 40% );
+
+.tabs-font{ font-family:Arial, Helvetica, sans-serif; }
 
 .tabs                 { overflow:hidden; }
-.tabs > ul            { display:inline; list-style:none; list-style-image:none; font-size:1.0em;  margin:0; padding-left:0; }
-.tabs > ul > li       { display:inline;  .mixin-margins(0,0,4px,0); .mixin-paddings(8px,4px,8px,4px); .tocs-font;
-                        .mixin-round-top(14px);  .mixin-user-select(none); background:@back20; color:#FFF; }
+.tabs > ul            { display:inline; list-style:none none; font-size:1.0em;  margin:0; padding-left:0; }
+.tabs > ul > li       { display:inline;  .mixin-margins(0,0,4px,0); .mixin-paddings(8px,4px,8px,4px); .tabs-font;
+                        .mixin-round-top(14px);  .mixin-user-select(none); background:@tabs-back20; color:#FFF; }
 .tabs > ul > li:hover { .mixin-hover; }
-.tabs > ul > .ton     { background:@back40; color:yellow; }
-.tabs > .ctn          { background:@back40; position:absolute; left:0; top:21px; right:0; bottom:0; .mixin-round-bottom(24px) }
+.tabs > ul > .ton     { background:@tabs-back40; color:yellow; }
+.tabs > .ctn          { background:@tabs-back40; position:absolute; left:0; top:21px; right:0; bottom:0; .mixin-round-bottom(24px) }
