--- a/less/vars.less
+++ b/less/vars.less
@@ -1,3 +1,3 @@
 
 @color-hue:180;     @color-sat:40%;  @color-lit:30%; @color-inc:12%;
-@layout-west:100px; @layout-north:0; @layout-east:0; @layout-south:0;
+@layout-west:0;    @layout-north:0; @layout-east:0; @layout-south:0;
