--- a/less/ui.less
+++ b/less/ui.less
@@ -21,6 +21,15 @@
 .ui-pane-text         { text-align:center; line-height:1.0; margin-top:4px; }
 .ui-pane-center-div:hover { .mixin-hover; }
 
+.ui-pane .panel  { font-family:Roboto, sans-serif; }
+.ui-pane .label  { font-size:3vmin; color:white; padding-top:0.3vmin; }
+.ui-pane .image  { font-size:2vmin; color:white; }
+.ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
+.ui-pane .branch { font-size:2vmin; color:white; line-height:2.5vmin; }
+
+.ui-pane .txt    { font-size:2vmin; color:white; }
+.ui-pane .img    {}
+
 /*
 .ui-pane-study-ul     { list-style:none; margin-left:0.1em;  line-height:1.2; margin-top:0; }
 .ui-pane-study-li     { }
