Mon 2/19 Rearraged panels for new Logo and Roast

--- a/less/ui.less
+++ b/less/ui.less
@@ -22,12 +22,14 @@
 .ui-pane-center-div:hover { .mixin-hover; }
 
 .ui-pane .panel  { font-family:Roboto, sans-serif; }
-.ui-pane .label  { font-size:3vmin; color:white; padding-top:0.3vmin; }
+.ui-pane .label  { font-size:3vmin; color:white; font-weight:bold; }
 .ui-pane .image  { font-size:2vmin; color:white; }
 .ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
-.ui-pane .branch { font-size:2vmin; color:white; line-height:2.5vmin; }
+.ui-pane .branch { font-size:2vmin; color:white; line-height:3vmin; }
+.ui-pane .roast  { font-size:2vmin; color:white; z-index:2; }
+.ui-pane .roast:hover  { color:wheat; }
 
-.ui-pane .txt    { font-size:2vmin; color:white; }
+  .ui-pane .txt    { font-size:2vmin; color:white; }
 .ui-pane .img    {}
 
 /*
