--- a/less/ui.less
+++ b/less/ui.less
@@ -2,6 +2,8 @@
 
 @import "layout.less";
 
+html { overflow:hidden; }
+
 .ui-font{ font-family:Arial, Helvetica, sans-serif; }
 
 @ui-back15:@color-back15;
