--- a/less/ui.less
+++ b/less/ui.less
@@ -6,8 +6,8 @@ html { overflow:hidden; }
 
 .ui-font{ font-family:Arial, Helvetica, sans-serif; }
 
-@ui-back15:@color-back15;
-@ui-back20:@color-back20;
+@ui-back15:@color-gray20;
+@ui-back20:@color-gray30;
 
 
 .ui-view { width:100%; height:100%; background-color:@ui-back15; }
