--- a/less/layout.less
+++ b/less/layout.less
@@ -7,8 +7,8 @@
 //@layout-west:170px; @layout-north:48px; @layout-east:32px; @layout-south:32px;
 
 //@layout-dark:@color-back60; @layout-lite:@color-back70; @layout-view:@color-back80;
-  @layout-dark:@color-back15; @layout-lite:@color-back70; @layout-view:@color-back80;
-  @layout-stat:@color-back10; @layout-norm:@color-back35;
+  @layout-dark:@color-gray60; @layout-lite:@color-gray70; @layout-view:@color-gray80;
+  @layout-stat:@color-gray10; @layout-norm:@color-gray35;
 
 .layout-font{ font-family:Arial, Helvetica, sans-serif; }
 
