Thu 3/22 Roast Slider and color interpolate

--- a/less/ui.less
+++ b/less/ui.less
@@ -28,7 +28,7 @@ html { overflow:hidden; }
 .ui-pane .image  { font-size:2vmin; color:white; }
 .ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
 .ui-pane .branch { font-size:2vmin; color:white; line-height:3vmin; }
-.ui-pane .roast  { font-size:2vmin; color:white; z-index:2; }
+.ui-pane .roast  { font-size:2vmin; color:white; z-index:2; } //  border:black solid 4px;
 .ui-pane .roast:hover  { color:wheat; }
 
   .ui-pane .txt    { font-size:2vmin; color:white; }
